Change src path

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 <head>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script type="text/javascript" src="/Users/alexschiff/Box Documents/Coding/Personify/scripts.js"></script>
-	<script type="text/javascript" src="/Users/alexschiff/Box Documents/Coding/Personify/fullcontact-api-jquery-plugin-master/jquery.fullcontact.2.0.js"></script>
+	<script type="text/javascript" src="scripts.js"></script>
+	<script type="text/javascript" src="fullcontact-api-jquery-plugin-master/jquery.fullcontact.2.0.js"></script>
 
 <style>
 
