Added social buttons, fixed duplicate issue for summary info

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
 	display: none;
 }
 
+.socialButton {
+	height: 25px;
+	width: 25px;
+	display: inline-block;
+	padding: 10px;
+}
+
 </style>
 
 </head>
@@ -92,15 +99,6 @@
 	<p class="miniSummary" id="currentJob"></p>
 	<p class="miniSummary" id="website"></p>
 </div>
-
-	<img class="socialButton" id="Facebook"/>
-	<img class="social Button" id="LinkedIn"/>
-	<img class="social Button" id="Twitter"/>
-	<img class="social Button" id="Quora"/>
-	<img class="social Button" id="YouTube"/>
-
-	<p class="miniSummary" id="kloutScore"></p>
-	<p class="miniSummary" id="kloutTopics"></p>
 
 </div>
 
