--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 .socialButton {
 	height: 25px;
 	width: 25px;
-	display: inline-block;
 	padding: 10px;
+	display: none;
 }
 
 </style>
@@ -98,6 +98,9 @@
 	<p class="miniSummary" id="location"></p>
 	<p class="miniSummary" id="currentJob"></p>
 	<p class="miniSummary" id="website"></p>
+	<img class="socialButton" id="Twitter" src="http://www.vjbooks.com/v/vspfiles/assets/images/official%20twitter%20button%20-%20300.png"/>
+	<img class="socialButton" id="Facebook" src="http://web.mit.edu/misti/images/Facebook%20Button.png"/>
+	<img class="socialButton" id="LinkedIn" src="http://www.ldcgasforums.com/Assets/Image/Linkedin_Button(1).jpg"/>
 </div>
 
 </div>
