Guessing right email in console, then idk

--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
 <br>
 <div id="twitterHandleDiv">Twitter handle <input type="text" name="Twitter" id="twitterHandle">
 <input type="submit" value ="Submit" id="submitButtonTwitter"></div>
+<br><br>
+<div id="guess">First name <input type="text" name="firstName" id ="firstName"><br>
+	Last name <input type="text" name="lastName" id ="lastName"><br>
+	Domain of company <input type="text" name="domain" id ="domain"><br>
+	<input type="submit" value="Submit" id="submitButtonGuess">
+</div>
+
 
 </div>
 
@@ -98,6 +105,7 @@
 	<p class="miniSummary" id="location"></p>
 	<p class="miniSummary" id="currentJob"></p>
 	<p class="miniSummary" id="website"></p>
+	<p class="miniSummary" id="Klout"></p>
 	<img class="socialButton" id="Twitter" src="http://www.vjbooks.com/v/vspfiles/assets/images/official%20twitter%20button%20-%20300.png"/>
 	<img class="socialButton" id="Facebook" src="http://web.mit.edu/misti/images/Facebook%20Button.png"/>
 	<img class="socialButton" id="LinkedIn" src="http://www.ldcgasforums.com/Assets/Image/Linkedin_Button(1).jpg"/>
