ASYNC CODE I DEFEAT YOU

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts.js"></script>
-	<script type="text/javascript" src="fullcontact-api-jquery-plugin-master/jquery.fullcontact.2.0.js"></script>
+	<script type="text/javascript" src="fullcontact-api-jquery-plugin/jquery.fullcontact.2.1.sync.js"></script>
 
 <style>
 
@@ -105,6 +105,7 @@
 	<p class="miniSummary" id="location"></p>
 	<p class="miniSummary" id="currentJob"></p>
 	<p class="miniSummary" id="website"></p>
+	<p class="miniSummary" id="email"></p>
 	<p class="miniSummary" id="Klout"></p>
 	<img class="socialButton" id="Twitter" src="http://www.vjbooks.com/v/vspfiles/assets/images/official%20twitter%20button%20-%20300.png"/>
 	<img class="socialButton" id="Facebook" src="http://web.mit.edu/misti/images/Facebook%20Button.png"/>
