--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts.js"></script>
-	<script type="text/javascript" src="fullcontact-api-jquery-plugin/jquery.fullcontact.2.1.sync.js"></script>
+	<script type="text/javascript" src="jquery.fullcontact.2.1.sync.js"></script>
 
 <style>
 
