Clean up clean up everybody everywhere

--- a/index.html
+++ b/index.html
@@ -77,20 +77,18 @@
 <body>
 
 <div id="header">
-<h1>The People Search Engine</h1>
+<h1>Hack anyone's email address</h1>
 </div>
 
 <div id="search">
-<h4>Guess an email address...I dare you.<h4>
-<div id="emailLookupDiv"><input type="text" name="Email" id="Email">
+<h4>Guess an email address, and see what pops up!<h4>
+<div id="emailLookupDiv"><input type="text" name="Email" id="EmailSearch">
 <input type="submit" value ="Submit" id="submitButtonEmail"></div>
 <br>
-<div id="twitterHandleDiv">Twitter handle <input type="text" name="Twitter" id="twitterHandle">
-<input type="submit" value ="Submit" id="submitButtonTwitter"></div>
-<br><br>
+<h4>Or, we can try to guess for you.</h4>
 <div id="guess">First name <input type="text" name="firstName" id ="firstName"><br>
 	Last name <input type="text" name="lastName" id ="lastName"><br>
-	Domain of company <input type="text" name="domain" id ="domain"><br>
+	Company domain name <input type="text" name="domain" id ="domain"><br>
 	<input type="submit" value="Submit" id="submitButtonGuess">
 </div>
 
@@ -107,6 +105,7 @@
 	<p class="miniSummary" id="website"></p>
 	<p class="miniSummary" id="email"></p>
 	<p class="miniSummary" id="Klout"></p>
+	<p class="miniSummary" id="console"></p>
 	<img class="socialButton" id="Twitter" src="http://www.vjbooks.com/v/vspfiles/assets/images/official%20twitter%20button%20-%20300.png"/>
 	<img class="socialButton" id="Facebook" src="http://web.mit.edu/misti/images/Facebook%20Button.png"/>
 	<img class="socialButton" id="LinkedIn" src="http://www.ldcgasforums.com/Assets/Image/Linkedin_Button(1).jpg"/>
