--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <form id="paypalbutton" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <table>
-<tr><td><input type="hidden" name="on0" value="Options">Was this website helpful? Let me know with a donation.</td></tr><tr><td><select name="os0">
+<tr><td><input type="hidden" name="on0" value="Options">Was this website helpful? Let me know with a donation :)</td></tr><tr><td><select name="os0">
 	<option value="I appreciate your useful tool!">I appreciate your useful tool! $0.99 USD</option>
 	<option value="I exploit the fruits of your labor.">I exploit the fruits of your labor. $0.00 USD</option>
 	<option value="If your website was a person, I would have its babies.">If your website was a person, I would have its babies. $19.99 USD</option>
