Fix my positioning fuck up

--- a/index.html
+++ b/index.html
@@ -55,17 +55,11 @@
 
 .miniSummary {
 	margin-left: 30px;
-	margin-top: 30px;
+	margin-top: 30pxs;
 }
 
 #twitterHandleDiv {
 	display: inline-block;
-}
-
-#paypalbutton {
-	display: inline-block;
-	position: relative;
-	margin-top: 100px;
 }
 
 .socialButton {
@@ -73,6 +67,11 @@
 	width: 25px;
 	padding: 10px;
 	display: none;
+}
+
+#paypalbutton {
+	position: relative;
+	margin-top: 100px;
 }
 
 </style>
@@ -114,7 +113,7 @@
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
 
-
+</div>
 
 <div id="personArea">
 <h3 id="fullNameHeader"></h3>
@@ -130,6 +129,8 @@
 	<img class="socialButton" id="Twitter" src="http://www.vjbooks.com/v/vspfiles/assets/images/official%20twitter%20button%20-%20300.png"/>
 	<img class="socialButton" id="Facebook" src="http://web.mit.edu/misti/images/Facebook%20Button.png"/>
 	<img class="socialButton" id="LinkedIn" src="http://www.ldcgasforums.com/Assets/Image/Linkedin_Button(1).jpg"/>
+</div>
+
 </div>
 
 </div>
