--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 <div id="search">
 <h4>Guess an email address, and see what pops up!<h4>
 <div id="emailLookupDiv"><input type="text" name="Email" id="EmailSearch">
-<input type="submit" value ="Submit" id="submitButtonEmail"></div>
+<input type="submit" value ="Submit" id="submitButtonEmail">
+<div id="phoneLookupDiv"><input type="text" name="Phone" id="PhoneSearch">
+	<input type="submit" value="Submit" id="submitButtonPhone"
+</div>
 <br>
 <h4>Or, we can try to guess for you.</h4>
 <div id="guess">First name <input type="text" name="firstName" id ="firstName"><br>
